--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "framer-motion": "^2.6.3",
     "next": "9.5.2",
+    "next-optimized-images": "^2.6.2",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-optimized-image": "^0.4.1"
+  },
+  "devDependencies": {
+    "imagemin-mozjpeg": "^9.0.0",
+    "sass": "^1.26.10",
+    "webp-loader": "^0.6.0"
   }
 }
